welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
}recule(h-1)
 ^